--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-plugin-vercel-deploy",
+  "name": "@lvdniet/strapi-plugin-vercel-deploy",
   "version": "1.4.0",
   "description": "Strapi v4 plugin to trigger and monitor a deployment on Vercel",
   "repository": "https://github.com/gianlucaparadise/strapi-plugin-vercel-deploy.git",
@@ -25,7 +25,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "engines": {
-    "node": ">=14.x.x <=18.x.x",
+    "node": ">=18.x.x <=22.x.x",
     "npm": ">=6.0.0"
   },
   "dependencies": {
